custom-ubuntu-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: custom-ubuntu-pod
spec:
  imagePullSecrets:
  - name: dockerhub 
  containers:
  - image: evolvecybertraining/qa-custom-ubuntu
    name: qa-custom-ubuntu
