dev-db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: td
spec:
  containers:
  - image: mysql:8
    name: test-container
    volumeMounts:
    - mountPath: /test-pd
      name: data-volume
  volumes:
  - name: data-volume
    hostPath:
     path: /data
      #path: /data directory location on host
