limit-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: limit-pod
  name: limit-pod
spec:
  containers:
  - image: nginx
    name: web
    # ports:
    # - containerPort: 80
    # name: web
    # protocol: TCP
    resources:
      requests: 
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "100m"
        memory: "128Mi"
