monolithic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: monolithic-pod
spec: 
  containers:
  - image: nginx
    name: web
  - image: memcached
    name: memcached
    stdin: true
    tty: true
