probe-app.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: probe-app
    manager: kubelet
    operation: Update
  name: probe-app
  namespace: default
  resourceVersion: "255131"
  selfLink: /api/v1/namespaces/default/pods/probe-app
  uid: a8ec572b-926c-49f8-8eef-e8ba49a14c29
spec:
  containers:
  - image: evolvecybertraining/probe-app:v1
    imagePullPolicy: Always
    name: probe-app
    livenessProbe:
      httpGet:
        path: /healthz
        port: 8080
    readinessProbe:
      httpGet:
        path: /started
        port: 8080
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-vbr6h
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: cka-cluster68-node2
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-vbr6h
    secret:
      defaultMode: 420
      secretName: default-token-vbr6h
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2020-06-13T21:53:54Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2020-06-13T21:53:56Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2020-06-13T21:53:56Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2020-06-13T21:53:54Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://b9eab29aa21eaf54045fbb6a2f1f3b2d2e34b334f35cfced8e11a03313087587
    image: evolvecybertraining/probe-app:v1
    imageID: docker-pullable://evolvecybertraining/probe-app@sha256:0de621eada7caa0d121d3b84153be3b7f2af913de6226fcc5ffaa536edb6e271
    name: probe-app
    ready: true
    restartCount: 0
    started: true
    state:
      running:
  hostIP: 172.16.1.179
  phase: Running
  podIP: 10.39.0.1
  podIPs:
  - ip: 10.39.0.1
  qosClass: BestEffort
