ready.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ready
  labels:
    app: ready
  namespace: default
spec:
  containers:
  - name: ready
    image: ubuntu
    command: ['sh', '-c', 'if [ -f "/work-dir/ready" ]; then sleep infinity; else exit 1; fi']
    volumeMounts:
    - mountPath: /work-dir
      name: cache-volume
  volumes:
  - name: cache-volume
    emptyDir: {}
