wordpress-lb.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wordpress-lb-service
  name: wordpress-lb-service
spec:
  externalTrafficPolicy: Local
  ports:
  - nodePort: 32081
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress-rs-pod
  type: LoadBalancer
