layer7-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: layer7-ingress
spec:
  rules:
  - http: 
      paths:
      - path: /
      - backend:
          serviceName: test-service1
          servicePort: 80
      - path: /test
        backend:
          serviceName: test-service2
          servicePort: 80
      paths:
      - backend:
          serviceName: service3
          servicePort: 80
