vgost-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vhost-ingress
spec:
  rules:
  - host: tubaloughlin.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-service1
          servicePort: 80
      - path: /test
        backend:
          serviceName: test-service2
          servicePort: 80
  - host: test3.tubaloughlin.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-service3
          servicePort: 80
  - host: test4.tubaloughlin.com
    http:
      paths:
      - path: /
        backend:
          serviceName: test-service4
          servicePort: 80
